avoid page break inside code comment

--- a/magicbook/stylesheets/components/codesplit.scss
+++ b/magicbook/stylesheets/components/codesplit.scss
@@ -88,6 +88,7 @@
     }
 
     .comment {
+      page-break-inside: avoid;
       flex-grow: 1;
       display: flex;
       justify-content: flex-end;
